more unit tests added